# agent-valley

./: .env.example  .gitignore  .mise.toml  AGENTS.md  AGENT_SETUP.md  CHANGELOG.md  CLAUDE.md  README.ko.md  README.md  WORKFLOW.md  biome.json  docker-compose.yml  package.json  release-please-config.json  valley.example.yaml  vitest.config.ts
.claude/: settings.json
.claude/hooks/: hud.ts  triggers.json  types.ts
.codex/hooks/: persistent-mode.ts
.github/: .pre-commit-config.yaml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  harness-gc.yml  release.yml  update-oma.yml
.qwen/: settings.json
api/: AGENTS.md  pyproject.toml
api/alembic/: env.py
api/src/: main.py
api/src/lib/: auth.py  config.py  database.py  exceptions.py  pagination.py  redis.py  storage.py
api/tests/: conftest.py
apps/cli/: CHANGELOG.md  build.ts  package.json
apps/dashboard/: next.config.ts  package.json
apps/mobile/: AGENTS.md  analysis_options.yaml  pubspec.yaml
dashboard/: instrumentation.ts  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
docs/: prd.md
docs/guides/: conformance-checklist.md  conventions.md  environment-setup.md  implementation-guide.md
docs/plans/: score-routing-design.md
docs/releases/: v0.2.0.md
docs/specs/: agent-runner.md  config-layer.md  observability.md  orchestrator.md  tracker-client.md  workspace-manager.md
scripts/: create-globe-crm-issues.sh  dev.sh  install.sh
scripts/harness/: gc.sh  validate.sh
src/: main.ts
src/__tests__/: completion-handler.test.ts  config.test.ts  helpers.test.ts  sync.test.ts  (+10 more)
(+135 files in other folders)
